# rag-chatbot

./: .dockerignore  .gitignore  DEPLOYMENT.md  GITHUB_SETUP.md  README.md  deploy-frontend.sh  docker-compose.yml  env.example  railway.json  requirements.txt  start.sh
backend/: Dockerfile  Makefile  env.example  env.production  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: middleware.py  routes_chat.py  routes_taxonomy.py  routes_uploads.py  routes_websites.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/: extractors.py  llm.py  rag_service.py  storage.py  taxonomy_builder.py  text_processing.py  vector_db.py  web_scraper.py  website_ingestion.py
backend/app/utils/: table.py  text.py
backend/scripts/: dev.sh  docker.sh  install.sh  start.sh  uninstall.sh
frontend/: nginx.conf  package-lock.json  package.json  vercel.json
frontend/public/: index.html
frontend/src/: App.js  index.css
ollama/: Dockerfile  Dockerfile.render  Dockerfile.simple  RENDER_DEPLOYMENT.md  railway.json
